--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
     "react": "^18.2.0",
