--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
+    "firebase": "^10.13.0",
     "react": "^18.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
