--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.13.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.4",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
+    "@types/react-bootstrap": "^0.32.37",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
