--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.10.4",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
+    "react-google-multi-lang": "^1.0.6",
     "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
